[gd_scene load_steps=15 format=3 uid="uid://dsatuyar14v2k"]

[ext_resource type="Script" uid="uid://ck8ccimgosgw6" path="res://world/world.gd" id="1_psf47"]
[ext_resource type="Script" uid="uid://5y6p0fgw5ciw" path="res://world/world_camera.gd" id="2_1sg5d"]
[ext_resource type="Resource" uid="uid://5rbclm50o1s5" path="res://default_worlds/Mundo Padrão.tres" id="2_dqqhb"]
[ext_resource type="PackedScene" uid="uid://xl8400wsyrr4" path="res://world/hud/mini_map/mini_map.tscn" id="3_3l1a1"]
[ext_resource type="Script" uid="uid://cw68nqiabeqjr" path="res://creature/creature_highlight.gd" id="3_b14dp"]
[ext_resource type="PackedScene" uid="uid://bh6bll2w5jv5g" path="res://world/hud/clock/clock.tscn" id="4_46fr4"]
[ext_resource type="PackedScene" uid="uid://beirk0bt486wl" path="res://line_chart/line_chart.tscn" id="4_qumfv"]
[ext_resource type="PackedScene" uid="uid://y4xw1cr1uk76" path="res://creature_card/creature_card.tscn" id="6_sit8l"]
[ext_resource type="PackedScene" uid="uid://4ucbadkjd5g2" path="res://family_tree/family_tree.tscn" id="8_ugd32"]
[ext_resource type="PackedScene" uid="uid://cvf7yf84caxyx" path="res://food_spawner/food_spawner_card.tscn" id="13_b2suy"]
[ext_resource type="LabelSettings" uid="uid://bse0aa8ieynyj" path="res://world/hud/category_label_setting.tres" id="14_dqqhb"]
[ext_resource type="PackedScene" uid="uid://c238lbc20111h" path="res://creature_spawner/creature_spawner_card.tscn" id="14_h8lre"]
[ext_resource type="PackedScene" uid="uid://bisllsvrnukgr" path="res://pause_menu/pause_menu.tscn" id="17_m0cxt"]
[ext_resource type="PackedScene" uid="uid://cwmxc1u65epmp" path="res://save_load_screen/save_load_screen.tscn" id="17_ysn08"]

[node name="World" type="Node2D"]
script = ExtResource("1_psf47")
data = ExtResource("2_dqqhb")

[node name="WorldCamera" type="Camera2D" parent="."]
process_mode = 3
script = ExtResource("2_1sg5d")
leak_tolerance = 500.0

[node name="HoverHighlight" type="Node2D" parent="."]
script = ExtResource("3_b14dp")
color = Color(1, 1, 1, 0.392157)

[node name="SelectHighlight" type="Node2D" parent="."]
script = ExtResource("3_b14dp")
color = Color(1, 1, 1, 0.588235)

[node name="Boundaries" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="Creatures" type="Node2D" parent="."]

[node name="Food" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Clock" parent="HUD/MarginContainer" instance=ExtResource("4_46fr4")]
layout_mode = 2
size_flags_horizontal = 4

[node name="Charts" type="PanelContainer" parent="HUD/MarginContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginContainer" type="MarginContainer" parent="HUD/MarginContainer/Charts"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer/Charts/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Gráficos"

[node name="ScrollContainer" type="ScrollContainer" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="PopChart" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_qumfv")]
layout_mode = 2
chart_name = "População"

[node name="LifespanChart" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_qumfv")]
layout_mode = 2
chart_name = "Expectativa de vida"

[node name="FoodChart" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_qumfv")]
layout_mode = 2
chart_name = "Comida disponível"

[node name="EnergyChart" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_qumfv")]
layout_mode = 2
chart_name = "Energia total"

[node name="ChildrenChart" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_qumfv")]
layout_mode = 2
chart_name = "Média de filhos"

[node name="MomentumChart" parent="HUD/MarginContainer/Charts/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_qumfv")]
layout_mode = 2
chart_name = "Momento total"

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 30

[node name="Cards" type="ScrollContainer" parent="HUD/MarginContainer/VBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer/Cards"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CreatureCard" parent="HUD/MarginContainer/VBoxContainer/Cards/HBoxContainer" instance=ExtResource("6_sit8l")]
layout_mode = 2

[node name="ComparisonCard" parent="HUD/MarginContainer/VBoxContainer/Cards/HBoxContainer" instance=ExtResource("6_sit8l")]
layout_mode = 2
size_flags_vertical = 0
show_life = false
show_actions = false

[node name="MiniMap" parent="HUD/MarginContainer/VBoxContainer" node_paths=PackedStringArray("world", "camera") instance=ExtResource("3_3l1a1")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
world = NodePath("../../../..")
camera = NodePath("../../../../WorldCamera")

[node name="FoodSpawnerCard" parent="HUD/MarginContainer" instance=ExtResource("13_b2suy")]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CreatureSpawnerCard" parent="HUD/MarginContainer" instance=ExtResource("14_h8lre")]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TreeContainer" type="PanelContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="HUD/MarginContainer/TreeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer/TreeContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/TreeContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Árvore genealógica"

[node name="SubViewportContainer" type="SubViewportContainer" parent="HUD/MarginContainer/TreeContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 0

[node name="SubViewport" type="SubViewport" parent="HUD/MarginContainer/TreeContainer/MarginContainer/VBoxContainer/SubViewportContainer"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(700, 250)
render_target_update_mode = 4

[node name="FamilyTree" parent="HUD/MarginContainer/TreeContainer/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("8_ugd32")]
layers_above = 3
layers_below = 3

[node name="WorldElements" type="PanelContainer" parent="HUD/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginContainer" type="MarginContainer" parent="HUD/MarginContainer/WorldElements"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Elementos"

[node name="ScrollContainer" type="ScrollContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Nascedouros"
label_settings = ExtResource("14_dqqhb")

[node name="CreatureSpawners" type="VBoxContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CreateCSpawnerBt" type="Button" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Criar"

[node name="HSeparator" type="HSeparator" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Comedouros"
label_settings = ExtResource("14_dqqhb")

[node name="FoodSpawners" type="VBoxContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="CreateFSpawnerBt" type="Button" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Criar"

[node name="HSeparator2" type="HSeparator" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Obstáculos"
label_settings = ExtResource("14_dqqhb")

[node name="Obstacles" type="VBoxContainer" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="CreateObstacleBt" type="Button" parent="HUD/MarginContainer/WorldElements/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Criar"

[node name="PauseMenu" parent="HUD/MarginContainer" instance=ExtResource("17_m0cxt")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SaveLoadScreen" parent="HUD/MarginContainer" instance=ExtResource("17_ysn08")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
